2002-07-27  Russ Allbery  <rra@stanford.edu>

	* README: Tie::ShadowHash 0.7 released.

	* ShadowHash.pm: Add SEE ALSO and COPYRIGHT AND LICENSE sections
	to the documentation.  Reformat for current formatting style.

1999-06-02  Russ Allbery  <rra@stanford.edu>

	* README: Tie::ShadowHash 0.6 released.

	* ShadowHash.pm: Added documentation of tagged data sources and of
	the "text" tagged data source in particular, as well as some
	examples, now that this has been verified as already working.

	* test.pl: Added tests for special text data sources that take a
	filename and a sub that returns a list of key and one or more
	values.

	* test/pairs.txt: New file.
	* test/triples.txt: New file.

1999-04-03  Russ Allbery  <rra@stanford.edu>

	* README: Tie::ShadowHash 0.5 released.

	* ShadowHash.pm: Fixed NEXTKEY again; it was skipping over too
	much of the source when it hit a deleted key.

	* test.pl: Added a test to ensure that deleted keys don't show up
	in the keys of the shadow hash.

	* ShadowHash.pm: Added some comments to the tied hash section of
	the code, fixed a bug in NEXTKEY where it didn't skip past entries
	that had been deleted.

	* test.pl: Switched from using SDBM_File to using AnyDBM_File
	since for some reason SDBM isn't built on the Mac port.  Also
	switched to building the DBM on the fly before running any tests,
	since a lot of DBMs, including SDBM, are byte-order-dependent.

	* test/first.txt: New file.
	* test/first.dir: Removed.
	* test/first.pag: Removed.

1999-03-22  Russ Allbery  <rra@stanford.edu>

	* README: Tie::ShadowHash 0.3 released.

	* TODO: New file.

	* ShadowHash.pm: [Revision 0.3] Added documentation.

	* test/first.dir: New file.
	* test/first.pag: New file.
	* test/full: New file.
	* test/second.txt: New file.

	* test.pl: New file.

	* Makefile.PL: New file.

	* ShadowHash.pm: [Revision 0.2] Don't use exists when finding a
	key in the databases, since some tied databases can't handle it